# khost

./: .gitignore  Cargo.toml  README.md  check  fail  kaspad
.github/workflows/: ci.yaml
bootstrap/: base  init  nginx  root  rust  systemd-all  systemd-mainnet  systemd-testnet-10  systemd-testnet-11
bootstrap/resources/nginx/: kaspa-wrpc-proxy.conf
bootstrap/resources/systemd/: kaspa-mainnet.service  kaspa-testnet-10.service  kaspa-testnet-11.service
src/: args.rs  base.rs  bootstrap.rs  cmd.rs  config.rs  console.rs  content.rs  context.rs  error.rs  flag.rs  folders.rs  fqdn.rs  git.rs  imports.rs  kaspad.rs  khost.rs  main.rs  network.rs  nginx.rs  resolver.rs  result.rs  rust.rs  service.rs  status.rs  sudo.rs  system.rs  systemd.rs  tls.rs  utils.rs
src/actions/: advanced.rs  bootstrap.rs  branches.rs  configure.rs  main.rs  manage.rs  mod.rs  status.rs  update.rs
