[package]
name = "khost"
version = "0.0.1"
edition = "2021"

[dependencies]

# workflow-core = { path = "../workflow-rs/core"}
# workflow-encryption = { path = "../workflow-rs/encryption"}
# workflow-serializer = { path = "../workflow-rs/serializer"}
# workflow-utils = { path = "../workflow-rs/utils"}

workflow-core = "0.14.0"
workflow-encryption = "0.14.0"
workflow-serializer = "0.14.0"
workflow-utils = "0.14.0"

# workflow-encryption = { git = "git@github.com:workflow-rs/workflow-rs.git" branch="master" }
# workflow-http = { git = "git@github.com:workflow-rs/workflow-rs.git" branch="master" }
# workflow-serializer = { git = "git@github.com:workflow-rs/workflow-rs.git" branch="master" }
# workflow-utils = { git = "git@github.com:workflow-rs/workflow-rs.git" branch="master" }



# separator = "0.4.1"
# strum = "0.26.3"
# strum_macros = "0.26.4"
addr = "0.15.6"
cfg-if = "1.0.0"
clap = { version = "4.5.8", features = ["derive", "string", "cargo"] }
cliclack = "0.3.1"
console = "0.15.8"
ctrlc = "3.4.4"
dirs = "5.0.1"
duct = "0.13.7"
is-root = "0.1.3"
lazy_static = "1.4.0"
pad = "0.1.6"
reqwest = { version = "0.12.5", features = ["json","blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sysinfo = "0.30.12"
thiserror = "1.0.61"
sha2 = "0.10.8"
rustls = "0.23.11"
mac_address = "1.1.7"
rustls-pemfile = "2.1.2"
tokio = { version = "1.38.0", default-features = false, features = ['io-util','time','sync','macros','rt','rt-multi-thread'] }
toml = "0.8.14"
whoami = "1.5.1"
termion = "4.0.2"


# derive_builder = "0.20.0"